# myth-eye-cal

./: .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  STATUS.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: .gitkeep
android/app/src/main/cpp/: CMakeLists.txt  mec_jni.cpp
android/app/src/main/java/com/mythcal/mec/: CameraController.kt  ImuController.kt  LocationController.kt  MainActivity.kt  MecNative.kt  OrientationController.kt  OverlayView.kt  PoseEstimator.kt
android/app/src/main/res/drawable/: bg_body.xml  bg_header.xml  bg_panel.xml  btn_bg.xml  seg_model.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
docs/: ACCURACY_METHODOLOGY.md  METRICS_REPORT.md  MITH_INTEGRATION.md
examples/ecs_pipeline_demo/: main.cpp
examples/mith_node_demo/: main.cpp
examples/render_server_demo/: main.cpp
examples/sim_pose_demo/: main.cpp
include/mec/: math.h  types.h
include/mec/components/: camera_intrinsics_component.h  internal_components.h  los_state_component.h  observer_metrics_component.h  pose_state_component.h
include/mec/ecs/: world.h
include/mec/fusion/: keypoint_kalman.h  multi_observer_fusion.h
include/mec/observer/: frame.h  imu_integrator.h  keypoint_projector.h  los_detector.h  lucas_kanade.h  temporal_stereo_depth.h
include/mec/render/: pose_serialiser.h  websocket_render_server.h
include/mec/sim/: beacon_pack.h  synthetic_pose.h
include/mec/systems/: kalman_predict_system.h  keypoint_aggregator_system.h  keypoint_broadcast_system.h  observer_activation_system.h  pose_fusion_system.h  render_serialiser_system.h
include/mec/transport/: device_registry.h  mith_runtime.h  udp_beacon_transport.h
mock/mith/: atomas.h
src/fusion/: keypoint_kalman.cpp  multi_observer_fusion.cpp
src/observer/: imu_integrator.cpp  keypoint_projector.cpp  lucas_kanade.cpp  temporal_stereo_depth.cpp
src/render/: websocket_render_server.cpp
src/transport/: mith_runtime.cpp  udp_beacon_transport.cpp
tests/integration/: test_ecs_pipeline.cpp  test_fusion_pipeline.cpp  test_udp_transport.cpp  test_udp_transport_edges.cpp  test_websocket_edges.cpp  test_websocket_server.cpp
tests/unit/: test_anisotropic_fusion.cpp  test_device_registry.cpp  test_ecs_world.cpp  test_fusion_edges.cpp  test_imu_integrator.cpp  test_kalman_tracker.cpp  test_keypoint_projector.cpp  test_los_detector.cpp  test_lucas_kanade.cpp  test_math.cpp  test_multi_observer_fusion.cpp  test_pose_serialiser.cpp  test_temporal_stereo.cpp  test_util.h  test_wire_payload.cpp
tools/: bench.cpp  ws_probe.py
viewer/: myth-eye-cal-viewer.html
